--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
       width: 50%;  /* Adjust width as needed */
       height: 100%;
       padding: 10px;
-      background-color: #1E1E1E;
+      background-color: white;
       color: #D4D4D4;
       border-left: 2px solid #61DAFB;
       overflow: hidden;
