--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@
       height: 100%;
       padding: 10px;
       background-color: white;
-      color: #D4D4D4;
+      color: red;
       border-left: 2px solid #61DAFB;
       overflow: hidden;
     }
